manifests/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: portail-qualite
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector: {app: portail-qualite}
  ports:
    - {name: http, port: 8080, targetPort: 8080, protocol: TCP}
---
apiVersion: v1
kind: Service
metadata:
  name: api-capteurs
spec:
  type: ClusterIP
  selector: {app: api-capteurs}
  ports:
    - {name: http, port: 8080, targetPort: 8080, protocol: TCP}
---
apiVersion: v1
kind: Service
metadata:
  name: cache-releves
spec:
  clusterIP: None
  selector: {app: cache-releves}
  ports:
    - {name: redis, port: 6379, targetPort: 6379, protocol: TCP}
